--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
                 </svg>
             </button>
 
+
             <ul class="contact list">
                 <li class="contact__item">
                     <a class="contact__link link" href="mailto:info@devstudio.com" lang="en">
@@ -69,6 +70,8 @@
                     <use href="./images/icons.svg#icon-close-black"></use>
                 </svg>
             </button>
+
+
             <ul class="mobile-menu__list list">
                 <li class="mobile-menu__item">
                     <a class="mobile-menu__link link" href="./index.html">Студия</a>
@@ -81,29 +84,31 @@
                 </li>
             </ul>
 
-            <ul class="contact-mobile list">
-                <li class="contact-mobile__item">
-                    <a href="tel:+380961111111" class="contact-mobile__tel link">+38 098 111 11 11</a>
-                </li>
-                <li class="contact-mobile__item">
-                    <a href="mailto:info@devstudio.com" class="contact-mobile__mailto link"
-                        lang="en">info@devstudio.com</a>
-                </li>
-            </ul>
-            <ul class="mobile-social__list list">
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">Instagram</a>
-                </li>
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">Twitter</a>
-                </li>
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">Facebook</a>
-                </li>
-                <li class="mobile-social__item">
-                    <a href="#" class="mobile-social__link link">LinkedIn</a>
-                </li>
-            </ul>
+            <div class="mobile-contact">
+                <ul class="contact-mobile list">
+                    <li class="contact-mobile__item">
+                        <a href="tel:+380961111111" class="contact-mobile__tel link">+38 098 111 11 11</a>
+                    </li>
+                    <li class="contact-mobile__item">
+                        <a href="mailto:info@devstudio.com" class="contact-mobile__mailto link"
+                            lang="en">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-social__list list">
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">Instagram</a>
+                    </li>
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">Twitter</a>
+                    </li>
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">Facebook</a>
+                    </li>
+                    <li class="mobile-social__item">
+                        <a href="#" class="mobile-social__link link">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
 
