--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <ul class="contact list">
                 <li class="contact__item">
-                    <a class="contact__link link" href="mailto:info@devstudio.com" lang="en">
+                    <a class="contact__link mail link" href="mailto:info@devstudio.com" lang="en">
                         <svg class="contact__icon" width="16" height="12px">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="contact__item">
-                    <a class="contact__link link" href="tel:+380961111111">
+                    <a class="contact__link tel link" href="tel:+380961111111">
                         <svg class="contact__icon" width="10px" height="16px">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
